syntax = "proto3";

package cogip.cogip_defs;

message PB_Pose {
    sint32 x = 1;
    sint32 y = 2;
    sint32 O = 3;
}

